# spectrum-load-balancer

./: CMakeLists.txt  balancer.cfg
src/: component.cpp  component.h  configfile.cpp  configfile.h  main.cpp  main.h
